--- a/frontend/src/app/pages/devices/devices-list.component.html
+++ b/frontend/src/app/pages/devices/devices-list.component.html
@@ -44,7 +44,13 @@
         </p-button>
       </div>
 
-      <div class="p-toolbar-group-end">
+      <div class="p-toolbar-group-end flex gap-2">
+        <p-button
+          label="Novo Dispositivo"
+          icon="pi pi-plus"
+          [styleClass]="'p-button-primary'"
+          routerLink="/devices/new">
+        </p-button>
         <p-button
           label="Atualizar"
           icon="pi pi-refresh"
